--- a/r4babs2/week-4/workshop.qmd
+++ b/r4babs2/week-4/workshop.qmd
@@ -106,7 +106,7 @@ str(seal)
 
 ### Exploring
 
-![](images/do_in_R.png) Do a quick plot of the data.You may need to refer to a previous workshop
+![](images/do_in_R.png) Do a quick plot of the data. You may need to refer to a previous workshop
 
 ```{r}
 #| include: false
@@ -189,7 +189,7 @@ Write your conclusion in a form suitable for a report.
 The ANOVA is significant but this only tells us that species matters, meaning at least two of the means differ.
 To find out which means differ, we need a post-hoc test.
 A post-hoc ("after this") test is done after a significant ANOVA test.
-There are several possible post-hoc tests and we will be using Tukey's HSD (honestly significant difference) test [@tukey1949]implemented in the **`emmeans`** package.
+There are several possible post-hoc tests and we will be using Tukey's HSD (honestly significant difference) test [@tukey1949] implemented in the **`emmeans`** [@emmeans] package.
 
 ![](images/do_in_R.png) Load the package
 
@@ -204,16 +204,17 @@ emmeans(mod, ~ species) |> pairs()
 
 ```
 
-Each row is a comparison between means.
-The 'estimate' column is the difference between the means and the 'p.value' column indicates whether that difference is significant.
+Each row is a comparison between the two means in the 'contrast' column. The 'estimate' column is the difference between those means and the 'p.value' indicates whether that difference is significant.
 
-A plot can be used to visualise the result of the post hoc which can be especially useful when there are very many comparisons.
+A plot can be used to visualise the result of the post-hoc which can be especially useful when there are very many comparisons.
 
-![](images/do_in_R.png)
+![](images/do_in_R.png) Plot the results of the post-hoc test:
 
 ```{r}
 emmeans(mod, ~ species) |> plot()
 ```
+
+Where the purple bars overlap, there is no significant difference.
 
 ![](images/answer.png) What do you conclude from the test?
 
@@ -226,7 +227,7 @@ emmeans(mod, ~ species) |> plot()
 ### Check assumptions
 
 The assumptions of the general linear model are that the residuals -- the difference between predicted value (i.e., the group mean) and observed values - are normally distributed and have homogeneous variance.
-To check these we need to calculate the residuals and we can do examine the `mod$residuals` variable.
+To check these we can examine the `mod$residuals` variable.
 You may want to refer to [Checking assumptions](../week-2/workshop.html#checking-assumptions) in the "Single regression" workshop.
 
 ![](images/do_in_R.png) Plot the model residuals against the fitted values.
