--- a/references.bib
+++ b/references.bib
@@ -133,3 +133,11 @@
 	url = {https://www.jstor.org/stable/3001913},
 	note = {Publisher: [Wiley, International Biometric Society]}
 }
+
+@Manual{emmeans,
+    title = {emmeans: Estimated Marginal Means, aka Least-Squares Means},
+    author = {Russell V. Lenth},
+    year = {2023},
+    note = {R package version 1.8.7},
+    url = {https://CRAN.R-project.org/package=emmeans},
+}
