tocs to all babs1 and 2

--- a/r4babs1/week-6/overview.qmd
+++ b/r4babs1/week-6/overview.qmd
@@ -1,6 +1,8 @@
 ---
 title: Overview
 subtitle: "Understanding file systems"
+toc: true
+toc-location: right
 ---
 
 This week you will carry out some independent study to ensure you have some understanding of computer file systems. We will introduce you to the concepts of paths and working directories.
