--- a/r4babs1/week-6/study_after_workshop.qmd
+++ b/r4babs1/week-6/study_after_workshop.qmd
@@ -1,6 +1,8 @@
 ---
 title: "Independent Study to consolidate this week"
 subtitle: "Understanding file systems"
+toc: true
+toc-location: right
 ---
 
 
