--- a/r4babs1/week-6/study_before_workshop.qmd
+++ b/r4babs1/week-6/study_before_workshop.qmd
@@ -1,6 +1,8 @@
 ---
 title: "Independent Study to prepare for workshop"
 subtitle: "Understanding file systems"
+toc: true
+toc-location: right
 ---
 
 1.  Watch an Introduction to Data Analysis in R for BABS 1 - 4
