--- a/r4babs1/week-7/study_after_workshop.qmd
+++ b/r4babs1/week-7/study_after_workshop.qmd
@@ -1,6 +1,8 @@
 ---
 title: "Independent Study to consolidate this week"
 subtitle: "Introduction to R, RStudio and project organisation"
+toc: true
+toc-location: right
 format:
   html:
     code-fold: true
