--- a/r4babs2/week-1/study_after_workshop.qmd
+++ b/r4babs2/week-1/study_after_workshop.qmd
@@ -1,6 +1,8 @@
 ---
 title: "Independent Study to consolidate this week"
 subtitle: "The logic of hypothesis testing and confidence intervals"
+toc: true
+toc-location: right
 format:
   html:
     code-fold: true
