--- a/r4babs2/week-2/study_before_workshop.qmd
+++ b/r4babs2/week-2/study_before_workshop.qmd
@@ -1,6 +1,8 @@
 ---
 title: "Independent Study to prepare for workshop"
 subtitle: "Introduction to statistical models: Single linear regression"
+toc: true
+toc-location: right
 ---
 
 1. 📖 Read [What is a statistical model](https://3mmarand.github.io/comp4biosci/what_statistical_model.html)
