--- a/r4babs2/week-3/overview.qmd
+++ b/r4babs2/week-3/overview.qmd
@@ -1,6 +1,8 @@
 ---
 title: "Overview"
 subtitle: "Two-sample tests"
+toc: true
+toc-location: right
 ---
 
 This week you will how to use and interpret the general linear model when the *x* variable is categorical and has two groups. Just as with single linear regression, the model puts a line of best through data and the model parameters, the intercept and the slope, have the same in interpretation The intercept is one of the group means and the slope is the difference between that, mean and the other group mean. You will also learn about the non-parametric equivalents - the tests we use when the assumptions of the general linear model are not met. 
