--- a/r4babs2/week-3/study_before_workshop.qmd
+++ b/r4babs2/week-3/study_before_workshop.qmd
@@ -1,6 +1,8 @@
 ---
 title: "Independent Study to prepare for workshop"
 subtitle: "Two-sample tests"
+toc: true
+toc-location: right
 ---
 
 1.  Prepare
