--- a/pgt52m/week-1/study_after_workshop.qmd
+++ b/pgt52m/week-1/study_after_workshop.qmd
@@ -1,6 +1,8 @@
 ---
 title: "Independent Study to consolidate this week"
 subtitle: "Understanding file systems"
+toc: true
+toc-location: right
 ---
 
 
