--- a/pgt52m/week-2/study_before_workshop.qmd
+++ b/pgt52m/week-2/study_before_workshop.qmd
@@ -1,6 +1,8 @@
 ---
 title: "Independent Study to prepare for workshop"
 subtitle: "Introduction to R, RStudio and project organisation"
+toc: true
+toc-location: right
 ---
 
 1.  **Either** 
