--- a/pgt52m/week-3/study_after_workshop.qmd
+++ b/pgt52m/week-3/study_after_workshop.qmd
@@ -1,6 +1,8 @@
 ---
 title: "Independent Study to consolidate this week"
 subtitle: "Types of variable, the normal distribution and summarising data"
+toc: true
+toc-location: right
 format:
   html:
     code-fold: true
