--- a/pgt52m/week-8/study_after_workshop.qmd
+++ b/pgt52m/week-8/study_after_workshop.qmd
@@ -1,6 +1,8 @@
 ---
 title: "Independent Study to consolidate this week"
 subtitle: "One-way ANOVA and Kruskal-Wallis"
+toc: true
+toc-location: right
 format:
   html:
     code-fold: true
