--- a/pgt52m/week-8/study_before_workshop.qmd
+++ b/pgt52m/week-8/study_before_workshop.qmd
@@ -1,6 +1,8 @@
 ---
 title: "Independent Study to prepare for workshop"
 subtitle: "One-way ANOVA and Kruskal-Wallis"
+toc: true
+toc-location: right
 ---
 
 1.  Prepare
